--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,19 +1,10 @@
 :root {
 --color-white: #ffffff;
---color-text: ;
---color-primary: ;
---color-primary-hover: ;
---color-secondary: ;
---color-secondary-hover: ;
---color-infos: ;
---color-warning: ;
---color-success: ;
-
---size-text : ;
---size-h1: ;
---size-h2: ;
---size-legend: ;
---size-small: ; 
+--color-text: #020122;
+--color-primary: #EDD382;
+--color-primary-hover: #F2F3AE;
+--color-secondary: #FC9E4F;
+--color-secondary-hover: #FF521B;
 }
 
 *,
@@ -24,22 +15,20 @@
   font-weight: normal;
 }
 
-body {
-  min-height: 100vh;
-  color: var(--color-text);
-  background-color: var(--color-white);
-  font-size: var(--size-text);
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Hedvig+Letters+Sans&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Noto+Sans+KR:wght@100..900&display=swap');
+
+@property --myColor1 {
+  syntax: '<color>';
+  initial-value: #F2F3AE;
+  inherits: false;
 }
+
+@property --myColor2 {
+  syntax: '<color>';
+  initial-value: #FC9E4F;
+  inherits: false;
+}
+
