--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,12 +1,78 @@
 @import './base.css';
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  min-height: 100vh;
+  color: var(--color-text);
+  background-color: var(--color-white);
+  font-family: "Noto Sans KR", sans-serif;
+}
+
+.lato-regular {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.lato-bold {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.lato-black {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
 
 section {
   min-height: 100vh;
 }
 
+/** Colors */
+.color-primary {
+  color: var(--color-primary);
+}
+
+.hover-color-primary:hover {
+  color: var(--color-primary-hover);
+}
+
+.color-secondary {
+  color: var(--color-secondary);
+}
+
+.hover-color-secondary {
+  color: var(--color-secondary-hover);
+}
+
+/** Background */
+.bg-primary {
+  background-color: var(--color-primary);
+  transition: 0.5s;
+}
+
+.bg-primary:hover {
+  background-color: var(--color-primary-hover) !important;
+}
+
+.bg-secondary {
+  background-color: var(--color-secondary);
+}
+
+.bg-secondary:hover {
+  background-color: var(--color-secondary-hover) !important;
+}
+
 .gradient {
-  background: linear-gradient(90deg, #d53369 0%, #daae51 100%);
+  background: linear-gradient( var(--myColor1), var(--myColor2));
+  transition: --myColor1 0.5s, --myColor2 0.5s;
+}
+.gradient:hover {
+ --myColor1: var(--color-primary);
+ --myColor2: var(--color-secondary-hover);
 }
